--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
+    "build-gh": "ng build --base-href /AngularApp2026/",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "lint": "ng lint"
